--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@expo/vector-icons": "^14.1.0",
     "@lucide/lab": "^0.1.2",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/datetimepicker": "8.4.1",
+    "@react-native-picker/picker": "2.11.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@supabase/supabase-js": "^2.39.0",
@@ -28,6 +30,7 @@
     "expo-image-picker": "^16.1.4",
     "expo-linear-gradient": "~14.1.3",
     "expo-linking": "~7.1.3",
+    "expo-localization": "^16.1.6",
     "expo-router": "~5.0.2",
     "expo-secure-store": "~14.1.1",
     "expo-splash-screen": "~0.30.6",
@@ -35,10 +38,13 @@
     "expo-symbols": "~0.4.3",
     "expo-system-ui": "~5.0.5",
     "expo-web-browser": "~14.1.5",
+    "i18next": "^25.3.2",
     "lucide-react-native": "^0.475.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-i18next": "^15.6.0",
     "react-native": "0.79.1",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.3.0",
@@ -46,9 +52,7 @@
     "react-native-svg": "15.11.2",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "^0.20.0",
-    "react-native-webview": "13.13.5",
-    "@react-native-community/datetimepicker": "8.4.1",
-    "@react-native-picker/picker": "2.11.1"
+    "react-native-webview": "13.13.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
